API is added for HRD model.

--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\FDPController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HRDController.cs" />
     <Compile Include="Controllers\HubController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -170,6 +171,7 @@
     <Compile Include="Models\CommodityType.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\FDP.cs" />
+    <Compile Include="Models\HRD.cs" />
     <Compile Include="Models\Hub.cs" />
     <Compile Include="Controllers\ShippingInstructionController.cs" />
     <Compile Include="Models\ShippingInstruction.cs" />
