CATS-1459: Bid REST development

--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -153,6 +153,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminUnitController.cs" />
     <Compile Include="Controllers\AdminUnitTypeController.cs" />
+    <Compile Include="Controllers\BidController.cs" />
     <Compile Include="Controllers\CommodityController.cs" />
     <Compile Include="Controllers\CommodityGradeController.cs" />
     <Compile Include="Controllers\CommodityTypeController.cs" />
@@ -310,6 +311,10 @@
     <ProjectReference Include="..\Services\Cats.Services.Hub\Cats.Services.Hub.csproj">
       <Project>{9fba0283-ee84-49f2-8305-f038bbf29658}</Project>
       <Name>Cats.Services.Hub</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\services\Cats.Services.Procurement\Cats.Services.Procurement.csproj">
+      <Project>{B0410B11-91E0-40EC-9F16-55FC5E2C4090}</Project>
+      <Name>Cats.Services.Procurement</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
