--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\HubController.cs" />
     <Compile Include="Controllers\HubOwnerController.cs" />
     <Compile Include="Controllers\LedgerController.cs" />
+    <Compile Include="Controllers\LossReasonController.cs" />
     <Compile Include="Controllers\ProgramController.cs" />
     <Compile Include="Controllers\ProjectCodeController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
@@ -199,6 +200,7 @@
     <Compile Include="Models\Ledger.cs" />
     <Compile Include="Models\LedgerType.cs" />
     <Compile Include="Models\LedgerTypeController.cs" />
+    <Compile Include="Models\LossReason.cs" />
     <Compile Include="Models\Program.cs" />
     <Compile Include="Models\ProjectCode.cs" />
     <Compile Include="Models\ShippingInstruction.cs" />
