--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\ProgramController.cs" />
     <Compile Include="Controllers\ProjectCodeController.cs" />
     <Compile Include="Controllers\RationController.cs" />
+    <Compile Include="Controllers\RegionalRequestController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
     <Compile Include="Global.asax.cs">
@@ -207,6 +208,8 @@
     <Compile Include="Models\Program.cs" />
     <Compile Include="Models\ProjectCode.cs" />
     <Compile Include="Models\Ration.cs" />
+    <Compile Include="Models\RegionalRequest.cs" />
+    <Compile Include="Models\RegionalRequestDetail.cs" />
     <Compile Include="Models\ShippingInstruction.cs" />
     <Compile Include="Models\Store.cs" />
     <Compile Include="Models\Unit.cs" />
