--- a/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
+++ b/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
@@ -80,5 +80,8 @@
     <Setting Name="TransporterWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">TransporterWorkflow</Value>
     </Setting>
+    <Setting Name="DistributionWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DistributionWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
