--- a/Web/Web.config
+++ b/Web/Web.config
@@ -91,24 +91,26 @@
 
 
 
-  <connectionStrings>
+  <!--<connectionStrings>
 
     <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
-  </connectionStrings>
-
-
-<!--<connectionStrings>
-
-    <add name="elmah-sql" connectionString="Data Source=192.168.1.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=192.168.1.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=192.168.1.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.1.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-
   </connectionStrings>-->
+
+
+<connectionStrings>
+
+    <add name="elmah-sql" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
+" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
+" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
 
 
   <appSettings>
