--- a/Web/Web.config
+++ b/Web/Web.config
@@ -89,11 +89,10 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
- 
+    <add name="elmah-sql" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
     
   <appSettings>
