--- a/Web/Web.config
+++ b/Web/Web.config
@@ -92,10 +92,10 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   
