FDP commodity recipt data entry activity summary is modified.

--- a/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
+++ b/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
@@ -83,5 +83,8 @@
     <Setting Name="DistributionWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DistributionWorkflow</Value>
     </Setting>
+    <Setting Name="FDPReceiptWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">FDPReceiptWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
