--- a/Web/Web.config
+++ b/Web/Web.config
@@ -89,13 +89,12 @@
 
 
   <connectionStrings>
-
-    <add name="elmah-sql" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-
+    <add name="elmah-sql" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
   
 
   <appSettings>
