--- a/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
+++ b/Services/Cats.Services.Workflow/Config/ApplicationSettings.settings
@@ -86,5 +86,8 @@
     <Setting Name="FDPReceiptWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">FDPReceiptWorkflow</Value>
     </Setting>
+    <Setting Name="RFQWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">RFQWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
