--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -923,7 +923,7 @@
     <Content Include="Areas\Logistics\Views\DispatchAllocation\AllocationAdjustment.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\ReliefRequisition\PromotThese.cshtml" />
     <Content Include="Areas\Logistics\Views\DispatchAllocation\UpdateRequisition.cshtml" />
-    <Content Include="Areas\EarlyWarning\Views\Request\Allocation_old.cshtml" />
+    <Content Include="Areas\EarlyWarning\Views\Request\Allocation.cshtml" />
     <None Include="Areas\Logistics\Views\DispatchAllocation\_AllocateProjectCode.cshtml" />
     <Content Include="Content\2013.1.219\Black\editor.png" />
     <Content Include="Content\2013.1.219\Black\imagebrowser.png" />
@@ -1886,7 +1886,7 @@
     <!--<Content Include="Areas\Logistics\Views\HubAllocation\Index.cshtml" />
     <Content Include="Areas\Logistics\Views\Edit.cshtml" />-->
     <!--<Content Include="Areas\Logistics\Views\HubAllocation\Edit.cshtml" />-->
-    <Content Include="Areas\EarlyWarning\Views\Request\Allocation.cshtml" />
+    <Content Include="Areas\EarlyWarning\Views\Request\Allocation_new.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\Request\Index.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\Request\New.cshtml" />
     <Content Include="Helpers\Images\ajax-loader.gif" />
