--- a/Web/Web.config
+++ b/Web/Web.config
@@ -34,9 +34,9 @@
       <!--<connectionString value="Data Source=.;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />-->
  <!--
       <connectionString value="$Data Source=.;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-      
-     
-		
+
+
+
       <connectionString value="$Data Source=EDGE-YONAS;Initial Catalog=CatsMaster;User=catsDev;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
 -->
 
@@ -92,19 +92,19 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
     <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
     <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />-->
+    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
- 
-    
+
+
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Enabled" value="false" />
@@ -113,7 +113,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
-    <add key="elmah.mvc.requiresAuthentication" value="false" />  
+    <add key="elmah.mvc.requiresAuthentication" value="false" />
     <add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
     <add key="elmah.mvc.allowedRoles" value="*" />
     <add key="elmah.mvc.allowedUsers" value="*" />
@@ -122,8 +122,8 @@
     <add key="CatsReportPassword" value="P@ssw0rd" />
     <add key="CatsReportServerURL" value="http://192.168.10.251/reportserver" />
     <add key="aspnet:AllowAnonymousImpersonation" value="true" />
-    
-  
+
+
     <!--<add key="CatsReportServerURL" value="$http://./reportserver" />-->
 
   </appSettings>
@@ -144,7 +144,7 @@
         -->
     <!--
         UseWCFCacheService:
-          False: use a local instance of the StorageCache class. 
+          False: use a local instance of the StorageCache class.
           True: use the NetSqlAzMan WCF Cache Service (remember to add the <system.serviceModel>...</system.serviceModel> section to your web.config file)
         -->
     <!--
