--- a/CatsAPI/Web.config
+++ b/CatsAPI/Web.config
@@ -9,16 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-
-    <add name="elmah-sql" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
-" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
-" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
-" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
-" providerName="System.Data.SqlClient" />
-
+    <add name="elmah-sql" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost " providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost " providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost " providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost " providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -66,12 +60,10 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <runtime>
@@ -91,6 +83,18 @@
       <dependentAssembly>
         <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
