CATS-1501, Transport Bid quatation header end point is added.

--- a/CatsAPI/Web.config
+++ b/CatsAPI/Web.config
@@ -10,14 +10,19 @@
   </configSections>
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
+    <!--<add name="elmah-sql" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
 " providerName="System.Data.SqlClient" />
     <add name="CatsContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
 " providerName="System.Data.SqlClient" />
     <add name="SecurityContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
 " providerName="System.Data.SqlClient" />
     <add name="LocalizationContext" connectionString="Password=P@ssw0rd;Persist Security Info=True;User ID=sa;Initial Catalog=Cats-v-1-3-1;Data Source=localhost
-" providerName="System.Data.SqlClient" />
+" providerName="System.Data.SqlClient" />-->
+
+    <add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
